# APIMader

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
mader/: __init__.py  app.py  database.py  schemas.py  security.py  settings.py
mader/models/: Autores.py  Livros.py  User.py  base_model.py
mader/routers/: auth.py  autores.py  livros.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_autores.py  test_db.py  test_livros.py  test_user.py
